--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -781,37 +781,126 @@
         "preferredTime": "पसंदीदा समय",
         "selectTime": "समय स्लॉट चुनें",
         "scheduleNow": "अभी शेड्यूल करें"
-      }
+      },
     
-        
       
-      ,"hero": {
-      "title": "हमारी यात्रा",
-      "subtitle": "यूनिगोल्ड फाइनेंस की विरासत को जानें, जो सोने के ऋण सेवाओं में विश्वास और उत्कृष्टता पर आधारित है।"
+  "overview": {
+    "title": "समय के साथ हमारी यात्रा",
+    "description": "हमारे संगठन को आज जो बनाया है, उस समृद्ध इतिहास और मील के पत्थरों को खोजें।",
+    "cta1": "त्वरित अवलोकन",
+    "cta2": "अधिक जानें"
+  },
+  "intro": {
+    "title": "हमारी कहानी की शुरुआत",
+    "description": "मामूली शुरुआत से लेकर एक उद्योग नेता बनने तक, हमारी यात्रा नवाचार, समर्पण और उत्कृष्टता के प्रति प्रतिबद्धता से चिह्नित रही है।",
+    "vision": {
+      "title": "विजन",
+      "description": "आने वाली पीढ़ियों के लिए सबसे भरोसेमंद वित्तीय भागीदार बनना।"
     },
-    "overview": {
-      "title": "यूनिगोल्ड फाइनेंस के बारे में",
-      "description": "2005 में स्थापित, यूनिगोल्ड फाइनेंस सोने के ऋण सेवाओं में एक भरोसेमंद नाम बन गया है, जो लाखों लोगों को सुलभ और पारदर्शी वित्तीय समाधानों के साथ सशक्त बनाता है। ग्राहक संतुष्टि के प्रति प्रतिबद्धता के साथ, हमने पूरे भारत में विस्तार किया है, परंपरा को नवाचार के साथ जोड़ते हुए।"
+    "mission": {
+      "title": "मिशन",
+      "description": "सुलभ वित्तीय समाधान और असाधारण सेवा के माध्यम से समुदायों को सशक्त बनाना।"
     },
-    "timeline": {
-      "title": "महत्वपूर्ण पड़ाव",
-      "milestone1": {
-        "title": "यूनिगोल्ड फाइनेंस की स्थापना",
-        "description": "मुंबई में पहली शाखा स्थापित की, समुदायों को सशक्त बनाने के लिए सुलभ सोने के ऋण शुरू किए।"
-      },
-      "milestone2": {
-        "title": "50 शाखाओं तक विस्तार",
-        "description": "भारत भर में 50 शाखाओं तक पहुंचे, शहरी और ग्रामीण क्षेत्रों में अपनी उपस्थिति को मजबूत किया।"
-      },
-      "milestone3": {
-        "title": "उत्कृष्टता पुरस्कार",
-        "description": "उत्कृष्ट ग्राहक सेवा और नवाचार के लिए राष्ट्रीय वित्त पुरस्कार प्राप्त किया।"
-      },
-      "milestone4": {
-        "title": "डिजिटल परिवर्तन",
-        "description": "ऑनलाइन ऋण आवेदन और ग्राहक पोर्टल शुरू किए, जिससे पहुंच में वृद्धि हुई।"
-      }
+    "values": {
+      "title": "मूल्य",
+      "description": "ईमानदारी, नवाचार, ग्राहक केंद्रितता और सामाजिक जिम्मेदारी हमारे हर निर्णय का मार्गदर्शन करती है।"
+    }
+  },
+  "timeline": {
+    "title": "हमारा ऐतिहासिक समयरेखा",
+    "subtitle": "मुख्य पल जिन्होंने हमारी वृद्धि और सफलता को परिभाषित किया"
+  },
+  "history": {
+    "founding": {
+      "year": "1995",
+      "title": "स्थापना",
+      "description": "केवल 10 कर्मचारियों और एक शाखा के साथ स्थापित, हमने स्थानीय समुदायों की सेवा करने की अपनी यात्रा शुरू की।"
     },
+    "milestone1": {
+      "year": "2002",
+      "title": "पहला प्रमुख विस्तार",
+      "description": "राज्य भर में 5 नई शाखाएं खोली, जो हमारे विकास के पहले चरण को चिह्नित करती हैं।"
+    },
+    "expansion": {
+      "year": "2010",
+      "title": "राज्यव्यापी उपस्थिति",
+      "description": "हमारे राज्य के सभी जिलों में शाखाएं रखने वाला पहला स्थानीय वित्तीय संस्थान बना।"
+    },
+    "present": {
+      "year": "2023",
+      "title": "डिजिटल परिवर्तन",
+      "description": "हमारे मोबाइल बैंकिंग प्लेटफॉर्म को लॉन्च किया, जो 1 मिलियन से अधिक ग्राहकों को डिजिटल रूप से सेवा प्रदान करता है।"
+    }
+  },
+  "stats": {
+    "title": "आंकड़ों में",
+    "subtitle": "हमारा प्रभाव जिन समुदायों में हम सेवा करते हैं",
+    "customers": {
+      "value": "1.2M+",
+      "label": "संतुष्ट ग्राहक"
+    },
+    "branches": {
+      "value": "150+",
+      "label": "शाखाएं"
+    },
+    "employees": {
+      "value": "2,500+",
+      "label": "समर्पित कर्मचारी"
+    },
+    "loans": {
+      "value": "₹5,000Cr+",
+      "label": "ऋण वितरित"
+    }
+  },
+  "leadership": {
+    "title": "हमारे नेताओं से मिलें",
+    "subtitle": "दूरदर्शी टीम जो हमारे संगठन को आगे बढ़ा रही है",
+    "ceo": {
+      "name": "राजेश शर्मा",
+      "position": "सीईओ और प्रबंध निदेशक",
+      "bio": "वित्तीय सेवाओं में 25+ वर्षों के अनुभव के साथ, वह 2010 से हमारे रणनीतिक विजन का मार्गदर्शन कर रहे हैं।"
+    },
+    "cto": {
+      "name": "प्रिया पटेल",
+      "position": "मुख्य प्रौद्योगिकी अधिकारी",
+      "bio": "डिजिटल परिवर्तन विशेषज्ञ जो 2018 में एक प्रमुख टेक फर्म से हमसे जुड़ीं।"
+    },
+    "cfo": {
+      "name": "अमित कुमार",
+      "position": "मुख्य वित्तीय अधिकारी",
+      "bio": "सतत विकास मॉडल में विशेषज्ञता रखने वाले वित्तीय रणनीतिकार।"
+    },
+    "coo": {
+      "name": "सुनीता रेड्डी",
+      "position": "मुख्य संचालन अधिकारी",
+      "bio": "संचालन विशेषज्ञ जिन्होंने हमारी शाखा नेटवर्क दक्षता को सुव्यवस्थित किया।"
+    }
+  },
+  "testimonials": {
+    "title": "हमारे ग्राहक क्या कहते हैं",
+    "subtitle": "क्षेत्र भर के व्यक्तियों और व्यवसायों द्वारा विश्वसनीय",
+    "testimonial1": {
+      "quote": "व्यक्तिगत सेवा और स्थानीय समझ उनके साथ बैंकिंग को एक सुखद अनुभव बनाती है।",
+      "name": "विक्रम मेहता",
+      "position": "लघु व्यवसाय स्वामी"
+    },
+    "testimonial2": {
+      "quote": "उनका डिजिटल बैंकिंग प्लेटफॉर्म किसी भी राष्ट्रीय बैंक जितना अच्छा है, लेकिन बेहतर ग्राहक सेवा के साथ।",
+      "name": "आन्या दास",
+      "position": "कॉलेज प्रोफेसर"
+    },
+    "testimonial3": {
+      "quote": "जब मुझे जल्दी कृषि ऋण की आवश्यकता थी, तो उन्होंने मेरी जरूरतों को समझा और अपेक्षा से तेजी से प्रसंस्करण किया।",
+      "name": "हरीश नायक",
+      "position": "किसान"
+    }
+  },
+  "cta": {
+    "title": "हमारी कहानी का हिस्सा बनें",
+    "description": "चाहे आप वित्तीय सेवाओं की तलाश कर रहे हों या करियर के अवसर, हम आपको हमारे बढ़ते परिवार में शामिल होने के लिए आमंत्रित करते हैं।",
+    "primary": "खाता खोलें",
+    "secondary": "हमसे संपर्क करें"
+  },
     
   "gallery": {
     "title": "विश्वास और सेवा की गैलरी",
@@ -849,9 +938,13 @@
     },
     "stats": {
       "title": "हमारा प्रभाव",
+      "subtitle": "हमारे ग्राहकों और समुदायों पर हमारी यात्रा के प्रभाव को मापें",
       "customers": { "value": "10 लाख+", "label": "सेवा प्राप्त ग्राहक" },
       "branches": { "value": "100+", "label": "राष्ट्रव्यापी शाखाएं" },
-      "loans": { "value": "5 लाख+", "label": "वितरित ऋण" }
+      "loans": { "value": "5 लाख+", "label": "वितरित ऋण" },
+       "employees":{"value": "₹230 क+",
+        "label": "कुल वितरित ऋण राशि"
+      }
     }
             
 ,"history": {
@@ -923,5 +1016,77 @@
     "enterValidWeight": "कृपया सही सोने का वजन दर्ज करें"
   
 }
-  
+  ,"contacts": {
+  "title": "संपर्क करें",
+  "phone": {
+    "title": "हमें कॉल करें",
+    "number": "+1-800-123-4567"
+  },
+  "email": {
+    "title": "हमें ईमेल करें",
+    "address": "support@financeapp.com"
+  },
+  "callback": {
+    "title": "कॉलबैक अनुरोध",
+    "description": "हमारी टीम 24 घंटे के भीतर संपर्क करेगी।"
+  },
+  "callNow": "अभी कॉल करें",
+  "sendMessage": "संदेश भेजें",
+  "requestCallback": "कॉलबैक अनुरोध करें"
+}
+,
+  "mission": {
+    "hero": {
+      "title": "हमारा मार्गदर्शक मिशन",
+      "subtitle": "उन सिद्धांतों को खोजें जो हमारे संगठन को आगे बढ़ाते हैं"
+    },
+    "statement": {
+      "title": "हमारा मिशन वक्तव्य",
+      "content": "अखंडता और सामुदायिक जिम्मेदारी के उच्चतम मानकों को बनाए रखते हुए अभिनव वित्तीय समाधानों के माध्यम से व्यक्तियों और व्यवसायों को सशक्त बनाना।"
+    },
+    "purpose": {
+      "title": "हमारा उद्देश्य",
+      "content": "हम अपने ग्राहकों को उनके सपनों को प्राप्त करने में मदद करने के लिए सार्थक वित्तीय अवसर पैदा करने के लिए मौजूद हैं, साथ ही हमारे समुदायों में सकारात्मक योगदान देते हैं।"
+    },
+    "difference": {
+      "title": "हमें अलग क्या बनाता है",
+      "content": "पारंपरिक वित्तीय संस्थानों के विपरीत, हम अपने ग्राहकों की जरूरतों को पूरा करने वाले समाधान देने के लिए नवीनतम तकनीक को व्यक्तिगत सेवा के साथ जोड़ते हैं।"
+    },
+    "values": {
+      "title": "हमारे मूल मूल्य",
+      "subtitle": "मूलभूत विश्वास जो हमारे कार्यों का मार्गदर्शन करते हैं",
+      "integrity": {
+        "title": "ईमानदारी",
+        "content": "हम अपने सभी व्यवसायों को ईमानदारी, पारदर्शिता और नैतिक व्यवहार के साथ संचालित करते हैं।"
+      },
+      "innovation": {
+        "title": "नवाचार",
+        "content": "हम रचनात्मक समाधानों के माध्यम से अपने ग्राहकों की सेवा करने के बेहतर तरीकों की लगातार तलाश करते हैं।"
+      },
+      "community": {
+        "title": "समुदाय",
+        "content": "हम वापस देने और हमारे द्वारा सेवा किए जाने वाले क्षेत्रों में सकारात्मक परिवर्तन लाने में विश्वास करते हैं।"
+      },
+      "excellence": {
+        "title": "उत्कृष्टता",
+        "content": "हम सेवा से लेकर संचालन तक हर काम में उच्चतम मानकों के लिए प्रयास करते हैं।"
+      }
+    },
+    "approach": {
+      "title": "हमारा दृष्टिकोण",
+      "content": "हम एक भरोसेमंद और अभिनव बैंकिंग अनुभव बनाने के लिए पारंपरिक मूल्यों को आधुनिक समाधानों के साथ जोड़ते हैं:",
+      "points": {
+        "1": "सभी निर्णयों में ग्राहक-प्रथम दर्शन",
+        "2": "वैश्विक मानकों के साथ स्थानीय समझ",
+        "3": "सतत विकास जो सभी हितधारकों को लाभ पहुंचाता है"
+      }
+    },
+    "cta": {
+      "title": "हमारे मिशन में शामिल हों",
+      "subtitle": "एक वित्तीय संस्थान का हिस्सा बनें जो वास्तव में आपकी सफलता की परवाह करता है",
+      "primary": "खाता खोलें",
+      "secondary": "अधिक जानें"
+    }
+  }
+
 }
