--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -782,37 +782,128 @@
         "preferredTime": "ପସନ୍ଦିତ ସମୟ",
         "selectTime": "ସମୟ ସ୍ଲଟ୍ ବାଛନ୍ତୁ",
         "scheduleNow": "ବର୍ତ୍ତମାନ ଯୋଜନା କରନ୍ତୁ"
-      }
-    
-         
-      
-      ,"hero": {
-      "title": "ଆମର ଯାତ୍ରା",
-      "subtitle": "ସୁନା ଋଣ ସେବାରେ ବିଶ୍ୱାସ ଏବଂ ଉତ୍କର୍ଷତା ଉପରେ ନିର୍ମିତ ଯୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସର ଐତିହ୍ୟ ଆବିଷ୍କାର କରନ୍ତୁ।"
-    },
-    "overview": {
-      "title": "ଯୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ବିଷୟରେ",
-      "description": "୨୦୦୫ ମସିହାରେ ପ୍ରତିଷ୍ଠିତ, ଯୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ସୁନା ଋଣ ସେବାରେ ଏକ ବିଶ୍ୱସ୍ତ ନାମ ହୋଇପାରିଛି, ଲକ୍ଷ ଲକ୍ଷ ଲୋକଙ୍କୁ ସୁଲଭ ଏବଂ ପାରଦର୍ଶୀ ଆର୍ଥିକ ସମାଧାନ ସହିତ ସଶକ୍ତ କରୁଛି। ଗ୍ରାହକ ସନ୍ତୁଷ୍ଟି ପ୍ରତି ପ୍ରତିବଦ୍ଧତା ସହିତ, ଆମେ ପୁରା ଭାରତରେ ବିସ୍ତାର କରିଛୁ, ପାରମ୍ପରିକତାକୁ ନବସୃଜନ ସହିତ ମିଶ୍ରଣ କରି।"
-    },
-    "timeline": {
-      "title": "ମାଇଲଷ୍ଟୋନ",
-      "milestone1": {
-        "title": "ଯୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ପ୍ରତିଷ୍ଠା",
-        "description": "ମୁମ୍ବାଇରେ ପ୍ରଥମ ଶାଖା ପ୍ରତିଷ୍ଠା କରାଗଲା, ସମୁଦାୟଙ୍କୁ ସଶକ୍ତ କରିବା ପାଇଁ ସୁଲଭ ସୁନା ଋଣ ଆରମ୍ଭ କରାଗଲା।"
       },
-      "milestone2": {
-        "title": "୫୦ଟି ଶାଖାକୁ ବିସ୍ତାର",
-        "description": "ଭାରତରେ ୫୦ଟି ଶାଖା ପର୍ଯ୍ୟନ୍ତ ପହଞ୍ଚିଲୁ, ସହରୀ ଏବଂ ଗ୍ରାମୀଣ ଅଞ୍ଚଳରେ ଆମର ଉପସ୍ଥିତିକୁ ମଜବୁତ କଲୁ।"
-      },
-      "milestone3": {
-        "title": "ଉତ୍କର୍ଷତା ପୁରସ୍କାର",
-        "description": "ଉତ୍କୃଷ୍ଟ ଗ୍ରାହକ ସେବା ଏବଂ ନବସୃଜନ ପାଇଁ ଜାତୀୟ ଆର୍ଥିକ ପୁରସ୍କାର ଗ୍ରହଣ କଲୁ।"
-      },
-      "milestone4": {
-        "title": "ଡିଜିଟାଲ ରୂପାନ୍ତର",
-        "description": "ଅନଲାଇନ ଋଣ ଆବେଦନ ଏବଂ ଗ୍ରାହକ ପୋର୍ଟାଲ ଆରମ୍ଭ କଲୁ, ଯାହା ସୁଲଭତାକୁ ବୃଦ୍ଧି କଲା।"
-      }
+ 
+
+  "overview": {
+    "title": "ସମୟର ସହିତ ଆମର ଯାତ୍ରା",
+    "description": "ଆମ ସଂସ୍ଥାକୁ ଆଜି ଯାହା ଗଢିଛି, ସେହି ସମୃଦ୍ଧ ଇତିହାସ ଏବଂ ମାଇଲଖୁଣ୍ଟଗୁଡିକୁ ଅନୁଧ୍ୟାନ କରନ୍ତୁ।",
+    "cta1": "ଦ୍ରୁତ ସମୀକ୍ଷା",
+    "cta2": "ଅଧିକ ଜାଣନ୍ତୁ"
+  },
+  "intro": {
+    "title": "ଆମର କାହାଣୀର ଆରମ୍ଭ",
+    "description": "ସାଧାରଣ ଆରମ୍ଭରୁ ଏକ ଶିଳ୍ପ ନେତା ହେବା ପର୍ଯ୍ୟନ୍ତ, ଆମର ଯାତ୍ରା ନବୀକରଣ, ନିବେଦନ ଏବଂ ଉତ୍କୃଷ୍ଟତା ପ୍ରତି ପ୍ରତିବଦ୍ଧତା ଦ୍ୱାରା ଚିହ୍ନିତ ହୋଇଛି।",
+    "vision": {
+      "title": "ଦୃଷ୍ଟିକୋଣ",
+      "description": "ଆସିବା ପିଢିଗୁଡିକ ପାଇଁ ସବୁଠାରୁ ବିଶ୍ୱସ୍ତ ଆର୍ଥିକ ସାଥୀ ହେବା।"
     },
+    "mission": {
+      "title": "ଲକ୍ଷ୍ୟ",
+      "description": "ସୁଲଭ ଆର୍ଥିକ ସମାଧାନ ଏବଂ ଅସାଧାରଣ ସେବା ମାଧ୍ୟମରେ ସମୁଦାୟଗୁଡିକୁ ସଶକ୍ତ କରିବା।"
+    },
+    "values": {
+      "title": "ମୂଲ୍ୟବୋଧ",
+      "description": "ସଚ୍ଚୋଟତା, ନବୀକରଣ, ଗ୍ରାହକ କେନ୍ଦ୍ରିତତା ଏବଂ ସାମାଜିକ ଦାୟିତ୍ୱ ଆମର ପ୍ରତ୍ୟେକ ନିଷ୍ପତ୍ତିକୁ ପରିଚାଳିତ କରେ।"
+    }
+  },
+  "timeline": {
+    "title": "ଆମର ଐତିହାସିକ ସମୟରେଖା",
+    "subtitle": "ଗୁରୁତ୍ୱପୂର୍ଣ୍ଣ ମୁହୂର୍ତ୍ତଗୁଡିକ ଯାହା ଆମର ବୃଦ୍ଧି ଏବଂ ସଫଳତାକୁ ପରିଭାଷିତ କରିଛି"
+  },
+  "history": {
+    "founding": {
+      "year": "1995",
+      "title": "ପ୍ରତିଷ୍ଠା",
+      "description": "କେବଳ 10 କର୍ମଚାରୀ ଏବଂ ଗୋଟିଏ ଶାଖା ସହିତ ପ୍ରତିଷ୍ଠିତ, ଆମେ ସ୍ଥାନୀୟ ସମୁଦାୟଗୁଡିକୁ ସେବା ପ୍ରଦାନ କରିବାର ଯାତ୍ରା ଆରମ୍ଭ କରିଥିଲୁ।"
+    },
+    "milestone1": {
+      "year": "2002",
+      "title": "ପ୍ରଥମ ପ୍ରମୁଖ ପ୍ରସାରଣ",
+      "description": "ରାଜ୍ୟ ଭରି 5 ନୂତନ ଶାଖା ଖୋଲିଲୁ, ଯାହା ଆମର ବୃଦ୍ଧିର ପ୍ରଥମ ପର୍ଯ୍ୟାୟକୁ ଚିହ୍ନିତ କରେ।"
+    },
+    "expansion": {
+      "year": "2010",
+      "title": "ରାଜ୍ୟବ୍ୟାପୀ ଉପସ୍ଥିତି",
+      "description": "ଆମ ରାଜ୍ୟର ସମସ୍ତ ଜିଲ୍ଲାରେ ଶାଖା ଥିବା ପ୍ରଥମ ସ୍ଥାନୀୟ ଆର୍ଥିକ ଅନୁଷ୍ଠାନ ହେଲୁ।"
+    },
+    "present": {
+      "year": "2023",
+      "title": "ଡିଜିଟାଲ ପରିବର୍ତ୍ତନ",
+      "description": "ଆମର ମୋବାଇଲ୍ ବ୍ୟାଙ୍କିଂ ପ୍ଲାଟଫର୍ମ ଲଞ୍ଚ କଲୁ, ଯାହା 1 ନିୟୁତରୁ ଅଧିକ ଗ୍ରାହକଙ୍କୁ ଡିଜିଟାଲ ଭାବରେ ସେବା ପ୍ରଦାନ କରେ।"
+    }
+  },
+  "stats": {
+    "title": "ସଂଖ୍ୟାରେ",
+    "subtitle": "ଆମର ପ୍ରଭାବ ଯେଉଁ ସମୁଦାୟଗୁଡିକରେ ଆମେ ସେବା କରୁ",
+    "customers": {
+      "value": "1.2M+",
+      "label": "ସନ୍ତୁଷ୍ଟ ଗ୍ରାହକ"
+    },
+    "branches": {
+      "value": "150+",
+      "label": "ଶାଖା"
+    },
+    "employees": {
+      "value": "2,500+",
+      "label": "ନିବେଦିତ କର୍ମଚାରୀ"
+    },
+    "loans": {
+      "value": "₹5,000Cr+",
+      "label": "ଋଣ ବିତରଣ"
+    }
+  },
+  "leadership": {
+    "title": "ଆମର ନେତୃତ୍ୱ ସହିତ ପରିଚିତ ହୁଅନ୍ତୁ",
+    "subtitle": "ଦୂରଦର୍ଶୀ ଦଳ ଯାହା ଆମ ସଂସ୍ଥାକୁ ଆଗକୁ ନେଉଛି",
+    "ceo": {
+      "name": "ରାଜେଶ ଶର୍ମା",
+      "position": "CEO ଓ ପ୍ରବନ୍ଧ ନିର୍ଦ୍ଦେଶକ",
+      "bio": "ଆର୍ଥିକ ସେବାରେ 25+ ବର୍ଷର ଅନୁଭବ ସହିତ, ସେ 2010 ରୁ ଆମର କୌଶଳଗତ ଦୃଷ୍ଟିକୁ ପରିଚାଳନା କରିଛନ୍ତି।"
+    },
+    "cto": {
+      "name": "ପ୍ରିୟା ପଟେଲ",
+      "position": "ମୁଖ୍ୟ ପ୍ରଯୁକ୍ତିବିଦ୍ୟା ଅଧିକାରୀ",
+      "bio": "ଡିଜିଟାଲ ପରିବର୍ତ୍ତନ ବିଶେଷଜ୍ଞ ଯିଏକି 2018 ରେ ଏକ ଅଗ୍ରଣୀ ଟେକ୍ ଫର୍ମରୁ ଆମ ସହିତ ଯୋଗ ଦେଇଥିଲେ।"
+    },
+    "cfo": {
+      "name": "ଅମିତ କୁମାର",
+      "position": "ମୁଖ୍ୟ ଆର୍ଥିକ ଅଧିକାରୀ",
+      "bio": "ସ୍ଥାୟୀ ବୃଦ୍ଧି ମଡେଲରେ ଦକ୍ଷତା ସହିତ ଆର୍ଥିକ କୌଶଳଗତ ବିଶେଷଜ୍ଞ।"
+    },
+    "coo": {
+      "name": "ସୁନୀତା ରେଡ୍ଡୀ",
+      "position": "ମୁଖ୍ୟ ପରିଚାଳନା ଅଧିକାରୀ",
+      "bio": "ପରିଚାଳନା ବିଶେଷଜ୍ଞ ଯିଏକି ଆମର ଶାଖା ନେଟୱର୍କ ଦକ୍ଷତାକୁ ସୁଗମ କରିଛନ୍ତି।"
+    }
+  },
+  "testimonials": {
+    "title": "ଆମର ଗ୍ରାହକମାନେ କଣ କହନ୍ତି",
+    "subtitle": "ଅଞ୍ଚଳ ଭରି ବ୍ୟକ୍ତିଗତ ଏବଂ ବ୍ୟବସାୟଗୁଡିକ ଦ୍ୱାରା ବିଶ୍ୱସ୍ତ",
+    "testimonial1": {
+      "quote": "ବ୍ୟକ୍ତିଗତ ସେବା ଏବଂ ସ୍ଥାନୀୟ ବୁଝାମଣା ସେମାନଙ୍କ ସହିତ ବ୍ୟାଙ୍କିଂକୁ ଏକ ଆନନ୍ଦଦାୟକ ଅନୁଭୂତି କରାଏ।",
+      "name": "ବିକ୍ରମ ମେହତା",
+      "position": "କ୍ଷୁଦ୍ର ବ୍ୟବସାୟୀ"
+    },
+    "testimonial2": {
+      "quote": "ସେମାନଙ୍କର ଡିଜିଟାଲ ବ୍ୟାଙ୍କିଂ ପ୍ଲାଟଫର୍ମ ଯେକୌଣସି ଜାତୀୟ ବ୍ୟାଙ୍କ ଭଳି ଭଲ, କିନ୍ତୁ ଉନ୍ନତ ଗ୍ରାହକ ସେବା ସହିତ।",
+      "name": "ଆନନ୍ୟା ଦାସ",
+      "position": "କଲେଜ ପ୍ରଫେସର"
+    },
+    "testimonial3": {
+      "quote": "ଯେତେବେଳେ ମୋତେ ଶୀଘ୍ର ଏକ କୃଷି ଋଣ ଆବଶ୍ୟକ ଥିଲା, ସେମାନେ ମୋର ଆବଶ୍ୟକତାକୁ ବୁଝିଲେ ଏବଂ ଆଶା କରିଥିବା ଅପେକ୍ଷା ଦ୍ରୁତତର ପ୍ରକ୍ରିୟାକରଣ କଲେ।",
+      "name": "ହରିଶ ନାୟକ",
+      "position": "କୃଷକ"
+    }
+  },
+  "cta": {
+    "title": "ଆମର କାହାଣୀର ଅଂଶ ହୁଅନ୍ତୁ",
+    "description": "ଆପଣ ଆର୍ଥିକ ସେବା ଖୋଜୁଛନ୍ତି କି ବୃତ୍ତିଗତ ସୁଯୋଗ, ଆମେ ଆପଣଙ୍କୁ ଆମର ବୃଦ୍ଧିଶୀଳ ପରିବାର ସହିତ ଯୋଗ ଦେବାକୁ ସ୍ୱାଗତ କରୁ।",
+    "primary": "ଖାତା ଖୋଲନ୍ତୁ",
+    "secondary": "ଆମ ସହିତ ଯୋଗାଯୋଗ କରନ୍ତୁ"
+  },
+
+
     
   "gallery": {
     "title": "ଭରସା ଓ ସେବାର ଗ୍ୟାଲେରୀ",
@@ -849,9 +940,13 @@
     },
     "stats": {
       "title": "ଆମର ପ୍ରଭାବ",
+      "subtitle": "ସଂଖ୍ୟାରେ ଆମର ସଫଳତା ଏବଂ ପ୍ରଭାବକୁ ଦେଖନ୍ତୁ",
       "customers": { "value": "୧୦ ଲକ୍ଷ+", "label": "ସେବା ପାଇଥିବା ଗ୍ରାହକ" },
       "branches": { "value": "୧୦୦+", "label": "ଦେଶବ୍ୟାପୀ ଶାଖା" },
-      "loans": { "value": "୫ ଲକ୍ଷ+", "label": "ବଣ୍ଟିତ ଋଣ" }
+      "loans": { "value": "୫ ଲକ୍ଷ+", "label": "ବଣ୍ଟିତ ଋଣ" },
+       "employees":{"value": "₹୨୩୦କୋଟି+",
+        "label": "ମୋଟ ଋଣ ଅଂଶ ବିତରଣ ହୋଇଛି"
+      }
     },
     "history": {
     "title": "ଆମର ଯାତ୍ରା",
@@ -922,5 +1017,77 @@
   "validation": {
     "enterValidWeight": "ଦୟାକରି ବୈଧ ସୁନାର ଓଜନ ପ୍ରବେଶ କରନ୍ତୁ"
   
-}
+},"contacts": {
+  "title": "ଯୋଗାଯୋଗ କରନ୍ତୁ",
+  "phone": {
+    "title": "ଆମକୁ କଲ୍ କରନ୍ତୁ",
+    "number": "+1-800-123-4567"
+  },
+  "email": {
+    "title": "ଆମକୁ ଇମେଲ୍ କରନ୍ତୁ",
+    "address": "support@financeapp.com"
+  },
+  "callback": {
+    "title": "କଲବ୍ୟାକ୍ ଅନୁରୋଧ କରନ୍ତୁ",
+    "description": "ଆମ ଟିମ୍ 24 ଘଣ୍ଟା ମଧ୍ୟରେ ଯୋଗାଯୋଗ କରିବେ |"
+  },
+  "callNow": "ବର୍ତ୍ତମାନ କଲ୍ କରନ୍ତୁ",
+  "sendMessage": "ବାର୍ତ୍ତା ପଠାନ୍ତୁ",
+  "requestCallback": "କଲବ୍ୟାକ୍ ଅନୁରୋଧ କରନ୍ତୁ"
+},
+
+  "mission": {
+    "hero": {
+      "title": "ଆମର ମାର୍ଗଦର୍ଶକ ଲକ୍ଷ୍ୟ",
+      "subtitle": "ସେହି ନୀତିଗୁଡିକୁ ଅନୁସନ୍ଧାନ କରନ୍ତୁ ଯାହା ଆମ ସଂସ୍ଥାକୁ ଆଗକୁ ନେଇଥାଏ"
+    },
+    "statement": {
+      "title": "ଆମର ଲକ୍ଷ୍ୟ ବକ୍ତବ୍ୟ",
+      "content": "ସଚ୍ଚୋଟତା ଏବଂ ସାମାଜିକ ଦାୟିତ୍ୱର ଉଚ୍ଚତମ ମାନଦଣ୍ଡକୁ ବଜାୟ ରଖିବା ସହିତ ନବୀନ ଆର୍ଥିକ ସମାଧାନ ମାଧ୍ୟମରେ ବ୍ୟକ୍ତିଗତ ଏବଂ ବ୍ୟବସାୟଗୁଡିକୁ ସଶକ୍ତ କରିବା।"
+    },
+    "purpose": {
+      "title": "ଆମର ଉଦ୍ଦେଶ୍ୟ",
+      "content": "ଆମେ ଆମର ଗ୍ରାହକମାନଙ୍କୁ ସେମାନଙ୍କ ସ୍ବପ୍ନ ପୂରଣ କରିବାରେ ସାହାଯ୍ୟ କରିବା ପାଇଁ ଅର୍ଥପୂର୍ଣ୍ଣ ଆର୍ଥିକ ସୁଯୋଗ ସୃଷ୍ଟି କରିବା ପାଇଁ ଅଛୁ, ଏବଂ ଆମ ସମୁଦାୟଗୁଡିକରେ ସକାରାତ୍ମକ ଅବଦାନ ଦେଇଥାଉ।"
+    },
+    "difference": {
+      "title": "ଆମକୁ ଭିନ୍ନ କ'ଣ କରେ",
+      "content": "ପାରମ୍ପାରିକ ଆର୍ଥିକ ଅନୁଷ୍ଠାନଠାରୁ ଭିନ୍ନ, ଆମେ ଆମର ଗ୍ରାହକଙ୍କ ଆବଶ୍ୟକତାକୁ ସଠିକ୍ ଭାବରେ ପୂରଣ କରୁଥିବା ସମାଧାନ ପ୍ରଦାନ କରିବା ପାଇଁ ଆଧୁନିକ ପ୍ରଯୁକ୍ତିବିଦ୍ୟାକୁ ବ୍ୟକ୍ତିଗତ ସେବା ସହିତ ମିଶାଇଥାଉ।"
+    },
+    "values": {
+      "title": "ଆମର ମୂଳ୍ୟବୋଧ",
+      "subtitle": "ମୌଳିକ ବିଶ୍ୱାସଗୁଡିକ ଯାହା ଆମର କାର୍ଯ୍ୟକୁ ପରିଚାଳିତ କରେ",
+      "integrity": {
+        "title": "ସଚ୍ଚୋଟତା",
+        "content": "ଆମେ ଆମର ସମସ୍ତ ବ୍ୟବସାୟକୁ ସାଚ୍ଚୋଟତା, ସ୍ୱଚ୍ଛତା ଏବଂ ନୈତିକ ଆଚରଣ ସହିତ ପରିଚାଳନା କରୁ।"
+      },
+      "innovation": {
+        "title": "ନବୀନତା",
+        "content": "ଆମେ ସୃଜନଶୀଳ ସମାଧାନ ମାଧ୍ୟମରେ ଆମର ଗ୍ରାହକଙ୍କୁ ସେବା ପ୍ରଦାନ କରିବାର ଉନ୍ନତ ଉପାୟ ଖୋଜୁଥାଉ।"
+      },
+      "community": {
+        "title": "ସମୁଦାୟ",
+        "content": "ଆମେ ଫେରି ଦେବା ଏବଂ ଆମ ଦ୍ୱାରା ସେବା କରାଯାଉଥିବା କ୍ଷେତ୍ରଗୁଡିକରେ ସକାରାତ୍ମକ ପରିବର୍ତ୍ତନ ଆଣିବା ଉପରେ ବିଶ୍ୱାସ କରୁ।"
+      },
+      "excellence": {
+        "title": "ଉତ୍କୃଷ୍ଟତା",
+        "content": "ସେବା ରୁ ପରିଚାଳନା ପର୍ଯ୍ୟନ୍ତ ପ୍ରତ୍ୟେକ କାର୍ଯ୍ୟରେ ଆମେ ଉଚ୍ଚତମ ମାନଦଣ୍ଡ ପାଇଁ ପ୍ରୟାସ କରୁ।"
+      }
+    },
+    "approach": {
+      "title": "ଆମର ଦୃଷ୍ଟିକୋଣ",
+      "content": "ଆମେ ଏକ ବିଶ୍ୱସ୍ତ ଏବଂ ନବୀନ ବ୍ୟାଙ୍କିଂ ଅନୁଭୂତି ସୃଷ୍ଟି କରିବା ପାଇଁ ପାରମ୍ପାରିକ ମୂଲ୍ୟବୋଧକୁ ଆଧୁନିକ ସମାଧାନ ସହିତ ମିଶାଇଥାଉ:",
+      "points": {
+        "1": "ସମସ୍ତ ନିଷ୍ପତ୍ତିରେ ଗ୍ରାହକ-ପ୍ରଥମ ଦର୍ଶନ",
+        "2": "ଜାଗତିକ ମାନଦଣ୍ଡ ସହିତ ସ୍ଥାନୀୟ ବୁଝାମଣା",
+        "3": "ସ୍ଥାୟୀ ବିକାଶ ଯାହା ସମସ୍ତ ହିତାଧିକାରୀଙ୍କୁ ଉପକୃତ କରେ"
+      }
+    },
+    "cta": {
+      "title": "ଆମର ଲକ୍ଷ୍ୟରେ ଯୋଗ ଦିଅନ୍ତୁ",
+      "subtitle": "ଏକ ଆର୍ଥିକ ଅନୁଷ୍ଠାନର ଅଂଶ ହୁଅନ୍ତୁ ଯାହା ପ୍ରକୃତରେ ଆପଣଙ୍କ ସଫଳତା ବିଷୟରେ ଚିନ୍ତା କରେ",
+      "primary": "ଖାତା ଖୋଲନ୍ତୁ",
+      "secondary": "ଅଧିକ ଜାଣନ୍ତୁ"
+    }
+  }
+
 }
