main faq section and other

--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -853,6 +853,11 @@
     }
   },
   "leadership": {
+ "heros": {
+      "title": "दूरदर्शी नेतृत्व को सशक्त बनाना",
+      "subtitle": "परिवर्तनशील नेतृत्व के माध्यम से नवाचार और उत्कृष्टता को संचालित करना."
+    },
+
     "title": "हमारे नेताओं से मिलें",
     "subtitle": "दूरदर्शी टीम जो हमारे संगठन को आगे बढ़ा रही है",
     "ceo": {
