--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -854,6 +854,10 @@
     }
   },
   "leadership": {
+    "heros": {
+      "title": "ଦୂରଦର୍ଶୀ ନେତୃତ୍ୱକୁ ସଶକ୍ତ କରିବା",
+      "subtitle": "ପରିବର୍ତ୍ତନଶୀଳ ନେତୃତ୍ୱ ମାଧ୍ୟମରେ ନବୀନୀକରଣ ଏବଂ ଉତ୍କୃଷ୍ଟତାକୁ ପରିଚାଳନା କରିବା."
+    },
     "title": "ଆମର ନେତୃତ୍ୱ ସହିତ ପରିଚିତ ହୁଅନ୍ତୁ",
     "subtitle": "ଦୂରଦର୍ଶୀ ଦଳ ଯାହା ଆମ ସଂସ୍ଥାକୁ ଆଗକୁ ନେଉଛି",
     "ceo": {
