--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -358,6 +358,11 @@
               "address": "Address",
               "agreeTerms": "I agree to the terms and conditions"
             },
+            "success": {
+              "title": "Application Submitted Successfully",
+              "message": "Thank you for applying for a gold loan. Our representative will contact you shortly.",
+              "button": "Okay"
+            },
             "placeholders": {
               "name": "Enter your full name",
               "email": "Enter your email",
@@ -867,48 +872,60 @@
     }
   },
   "leadership": {
+    
     "title": "Meet Our Leaders",
     "subtitle": "The visionary team guiding our organization forward",
+    "heros": {
+      "title": "Empowering Visionary Leadership",
+      "subtitle": "Guiding innovation and excellence through transformative leadership."
+    },
     "ceo": {
       "name": "Rajesh Sharma",
       "position": "CEO & Managing Director",
-      "bio": "With 25+ years in financial services, he has guided our strategic vision since 2010."
+      "bio": "With 25+ years in financial services, he has guided our strategic vision since 2010.",
+      "picture":"../image/img3.jpeg"
     },
     "cto": {
       "name": "Priya Patel",
       "position": "Chief Technology Officer",
-      "bio": "Digital transformation expert who joined us from a leading tech firm in 2018."
+      "bio": "Digital transformation expert who joined us from a leading tech firm in 2018.",
+      "picture":"../image/img4.jpeg"
     },
     "cfo": {
       "name": "Amit Kumar",
       "position": "Chief Financial Officer",
-      "bio": "Financial strategist with expertise in sustainable growth models."
+      "bio": "Financial strategist with expertise in sustainable growth models.",
+      "picture":"../image/img5.jpeg"
     },
     "coo": {
       "name": "Sunita Reddy",
       "position": "Chief Operations Officer",
-      "bio": "Operations specialist who streamlined our branch network efficiency."
+      "bio": "Operations specialist who streamlined our branch network efficiency.",
+      "picture":"../image/img6.jpeg"
     }
   },
-  "testimonials": {
-    "title": "What Our Customers Say",
-    "subtitle": "Trusted by individuals and businesses across the region",
-    "testimonial1": {
-      "quote": "The personalized service and local understanding makes banking with them a pleasure.",
-      "name": "Vikram Mehta",
-      "position": "Small Business Owner"
-    },
-    "testimonial2": {
-      "quote": "Their digital banking platform is as good as any national bank, but with better customer care.",
-      "name": "Ananya Das",
-      "position": "College Professor"
-    },
-    "testimonial3": {
-      "quote": "When I needed an agricultural loan quickly, they understood my needs and processed it faster than expected.",
-      "name": "Harish Nayak",
-      "position": "Farmer"
-    }
+"testimonialsl": {
+  "title": "What Our Customers Say",
+  "subtitle": "Trusted by individuals and businesses across the region",
+  "testimonial1": {
+    "quote": "The personalized service and local understanding makes banking with them a pleasure.",
+    "name": "Vikram Mehta",
+    "position": "Small Business Owner",
+    "contextImage": "/images/img1.jpeg"
   },
+  "testimonial2": {
+    "quote": "Their digital banking platform is as good as any national bank, but with better customer care.",
+    "name": "Ananya Das",
+    "position": "College Professor",
+    "contextImage": "/images/img2.jpeg"
+  },
+  "testimonial3": {
+    "quote": "When I needed an agricultural loan quickly, they understood my needs and processed it faster than expected.",
+    "name": "Harish Nayak",
+    "position": "Farmer",
+    "contextImage": "/images/img3.jpeg"
+  }
+},
   "cta": {
     "title": "Become Part of Our Story",
     "description": "Whether you're looking for financial services or career opportunities, we welcome you to join our growing family.",
@@ -1105,6 +1122,38 @@
       "primary": "Open an Account",
       "secondary": "Learn More"
     }
+
   }
+  ,
+  "faq": {
+  "title": "Frequently Asked Questions",
+  "subtitle": "Find answers to common questions about our services",
+  "searchPlaceholder": "Search questions...",
+  "categories": {
+    "all": "All Questions",
+    "application": "Loan Application",
+    "repayment": "Repayment",
+    "gold": "Gold Valuation",
+    "account": "Account Management"
+  },
+  "questions": {
+    "q1": "How do I apply for a gold loan?",
+    "q2": "What is the interest rate for gold loans?",
+    "q3": "How is the gold value calculated?",
+    "q4": "What happens if I miss a repayment?",
+    "q5": "How can I check my loan balance?"
+  },
+  "answers": {
+    "a1": "You can apply for a gold loan through our website, mobile app, or by visiting any of our branches. You will need to bring your gold items for valuation and provide valid identification documents.",
+    "a2": "Our gold loan interest rates start at 12% per annum and vary based on the loan amount and tenure. Current rates are displayed on our website and app.",
+    "a3": "Gold value is calculated based on the current market price, purity of your gold (measured in karats), and weight. Our certified appraisers will assess your gold items.",
+    "a4": "Late payments may incur penalties. If you anticipate difficulty in repayment, please contact our customer service immediately to discuss restructuring options.",
+    "a5": "You can check your loan balance through our mobile app, online banking portal, or by contacting our customer service."
+  },
+  "noResults": {
+    "title": "No questions found",
+    "description": "Try adjusting your search or filter criteria"
+  }
+}
 
 }
