privecy policy updated

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -289,7 +289,7 @@
   "footer": {
     "tagline": "Your trusted partner for gold loans",
     "quickLinks": "Quick Links",
-    "contact": "Contact",
+    "contact": "Corporate Governance",
     "address": "Address"
   },
     "goldLoan": {
