--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -266,7 +266,7 @@
       "submit": "Send Message"
     },
     "info": {
-      "address": "123 Finance Street, Mumbai",
+      "address": "1st Floor, Ridge Residency Complex, Baramunda, Bhubaneswar",
       "phone": "+91 1800-123-4567",
       "email": "info@unigold.com"
     }
