Home page new Calculator created

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -302,7 +302,7 @@
       "submit": "Submit Application"
     },
       "whyChooseUs": {
-        "title": "Why Choose Us",
+        "title": "Why Choose Us ?",
         "features": {
           "lowInterest": {
             "title": "Low Interest Rates",
