--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -311,7 +311,7 @@
           },
           "flexibleRepayment": {
             "title": "लचीला पुनर्भुगतान",
-            "desc": "3 से 12 महीने तक की अवधि चुनें"
+            "desc": "1 से 12 महीने तक की अवधि चुनें"
           }
         },
         "trusted": "द्वारा विश्वसनीय",
@@ -487,8 +487,8 @@
                   "eligibility": {
                     "title": "पात्रता मानदंड",
                     "description": "यूनिगोल्ड फाइनेंस से सोने की लोन लेना सरल और समावेशी है। हमारे पात्रता मानदंड विभिन्न प्रकार के ग्राहकों के लिए बनाए गए हैं।",
-                    "point1": "न्यूनतम आयु आवश्यकता: 18 वर्ष",
-                    "point2": "सोने के आभूषण, सिक्के या बिस्कुट का स्वामित्व",
+                    "point1": "न्यूनतम आयु आवश्यकता: 21 वर्ष",
+                    "point2": "सोने के आभूषण का स्वामित्व",
                     "point3": "क्रेडिट स्कोर या आय प्रमाण की आवश्यकता नहीं"
                   },
                   "documents": {
