--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -311,7 +311,7 @@
             },
             "flexibleRepayment": {
               "title": "ନମନୀୟ ପରିଶୋଧ",
-              "desc": "3 ରୁ 12 ମାସ ପର୍ଯ୍ୟନ୍ତ ଅବଧି ବାଛନ୍ତୁ"
+              "desc": "1 ରୁ 12 ମାସ ପର୍ଯ୍ୟନ୍ତ ଅବଧି ବାଛନ୍ତୁ"
             }
           },
           "trusted": "ଦ୍ୱାରା ବିଶ୍ୱସ୍ତ",
@@ -488,8 +488,8 @@
                     "eligibility": {
                       "title": "ଯୋଗ୍ୟତା ନିର୍ଣାୟକ",
                       "description": "ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ସହିତ ସୁନା ଋଣ ପାଇଁ ଆବେଦନ କରିବା ସରଳ ଏବଂ ସମାବେଶୀ | ଆମର ଯୋଗ୍ୟତା ନିର୍ଣାୟକ ବିଭିନ୍ନ ପ୍ରକାରର ଗ୍ରାହକଙ୍କ ପାଇଁ ଉଦ୍ଦିଷ୍ଟ |",
-                      "point1": "ସର୍ବନିମ୍ନ ବୟସ ଆବଶ୍ୟକତା: 18 ବର୍ଷ",
-                      "point2": "ସୁନା ଅଳଙ୍କାର, ମୁଦ୍ରା କିମ୍ବା ବାଟିର ମାଲିକାନା",
+                      "point1": "ସର୍ବନିମ୍ନ ବୟସ ଆବଶ୍ୟକତା: 21 ବର୍ଷ",
+                      "point2": "ସୁନା ଅଳଙ୍କାର ମାଲିକାନା",
                       "point3": "କ୍ରେଡିଟ ସ୍କୋର କିମ୍ବା ଆୟ ପ୍ରମାଣ ଆବଶ୍ୟକ ନାହିଁ"
                     },
                     "documents": {
