UNIGOLD FINANCE LTD customer base etc section created and some changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -3,7 +3,7 @@
     "home": "Home",
     "calculator": "Loan Calculator",
     "services": "Services",
-    "about": "About",
+    "about": "About Us",
     "gallery": "Gallery",
     "support": "Support",
     "career": "Career",
